@@ -185,29 +185,27 @@ String CSSMutableStyleDeclaration::get4Values( const int* properties ) const
 String CSSMutableStyleDeclaration::getLayeredShorthandValue(const int* properties, unsigned number) const
 {
     String res;
-    unsigned i;
-    unsigned j;
 
     // Begin by collecting the properties into an array.
     Vector< RefPtr<CSSValue> > values(number);
-    unsigned numLayers = 0;
+    size_t numLayers = 0;
     
-    for (i = 0; i < number; ++i) {
+    for (size_t i = 0; i < number; ++i) {
         values[i] = getPropertyCSSValue(properties[i]);
         if (values[i]) {
             if (values[i]->isValueList()) {
                 CSSValueList* valueList = static_cast<CSSValueList*>(values[i].get());
                 numLayers = max(valueList->length(), numLayers);
             } else
-                numLayers = max(1U, numLayers);
+                numLayers = max(1UL, numLayers);
         }
     }
     
     // Now stitch the properties together.  Implicit initial values are flagged as such and
     // can safely be omitted.
-    for (i = 0; i < numLayers; i++) {
+    for (size_t i = 0; i < numLayers; i++) {
         String layerRes;
-        for (j = 0; j < number; j++) {
+        for (size_t j = 0; j < number; j++) {
             RefPtr<CSSValue> value;
             if (values[j]) {
                 if (values[j]->isValueList())
